--- a/Stydy10/css/arraystudy.css
+++ b/Stydy10/css/arraystudy.css
@@ -37,6 +37,11 @@
   background: #c9c6c6;
   text-align: center;
 }
+#container #cartWrap > h1 {
+  margin-top: 50px;
+  font-size: 34px;
+  font-weight: 600;
+}
 #container #cartWrap #cartTable {
   width: 80%;
   margin: 50px auto;
