--- a/Stydy10/css/arraystudy.css
+++ b/Stydy10/css/arraystudy.css
@@ -2,6 +2,27 @@
   width: 1200px;
   margin: 0 auto;
 }
+#container #utilWrap {
+  padding: 15px;
+  box-sizing: border-box;
+  background: #000000;
+  color: #fff;
+}
+#container #utilWrap #pointArea {
+  display: none;
+  border: 1px solid #f9f9f9;
+  align-items: flex-end;
+  font-weight: 600;
+}
+#container #utilWrap #pointArea > span {
+  padding: 5px;
+  border-radius: 8%;
+  font-size: 12px;
+}
+#container #utilWrap #pointArea > button {
+  background: #000;
+  color: #fff;
+}
 #container > h1 {
   margin-top: 30px;
   text-align: center;
@@ -18,7 +39,68 @@
 }
 #container #itemWrap #itemList > li {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
   margin-top: 10px;
+  font-size: 20px;
+}
+#container #itemWrap #itemList > li .name {
+  margin-right: 10px;
+}
+#container #itemWrap #itemList > li > label {
+  width: 20%;
+  font-weight: 700;
+  margin-right: 20px;
+}
+#container #itemWrap #itemList > li > span {
+  width: 20%;
+}
+#container #itemWrap #itemList > li .counts {
+  width: 20%;
+}
+#container #pagenation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+#container #pagenation > i {
+  color: #333;
+  font-size: 30px;
+  cursor: pointer;
+}
+#container #pagenation #pageNumbers {
+  display: flex;
+}
+#container #pagenation #pageNumbers > li {
+  margin: 12px;
+  text-align: center;
+  vertical-align: middle;
+}
+#container #pagenation #pageNumbers > li > a {
+  display: inline-block;
+  padding: 8px;
+  border: 1px solid #333;
+  font-size: 24px;
+  background: #fff;
+  box-sizing: border-box;
+}
+#container #pagenation #pageNumbers > li .active {
+  background: #333;
+}
+#container #pagenation #pageNumbers .active {
+  margin: 12px;
+  text-align: center;
+  vertical-align: middle;
+}
+#container #pagenation #pageNumbers .active > a {
+  display: inline-block;
+  padding: 8px;
+  border: 1px solid #333;
+  font-size: 24px;
+  background: #333;
+  box-sizing: border-box;
 }
 #container #cartbt {
   display: block;
