--- a/Stydy10/scss/arraystudy.scss
+++ b/Stydy10/scss/arraystudy.scss
@@ -3,6 +3,32 @@
     width: 1200px;
     margin: 0 auto ;
 
+    #utilWrap {
+        padding: 15px;
+        box-sizing: border-box;
+        background: #000000;
+        color: #fff;
+
+        #pointArea {
+            display: none;
+            border: 1px solid #f9f9f9;
+            align-items: flex-end;
+            font-weight: 600;
+
+            > span {
+                padding: 5px;
+                border-radius: 8%;
+                font-size: 12px;
+            }
+
+            > button {
+                background: #000;
+                color: #fff;
+            }
+        }
+        
+    }
+
     > h1 {
         margin-top: 30px;
         text-align: center;
@@ -20,10 +46,89 @@
             
             > li {
                 display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 40px;
                 margin-top: 10px;
+                font-size: 20px;
+
+                .name {
+                    margin-right: 10px;
+                }
+                > label {
+                    width: 20%;
+                    font-weight: 700;
+                    margin-right: 20px;
+                }
+
+                > span {
+                    width: 20%;
+                    
+
+                }
+
+                .counts {
+                    width: 20%;
+                    
+                }
 
 
                 
+            }
+        }
+    }
+
+    #pagenation {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        
+        > i {
+            color: #333;
+            font-size: 30px;
+            cursor: pointer;
+            
+        }
+
+        #pageNumbers {
+            display: flex;
+
+            > li {
+                margin: 12px;
+                text-align: center;
+                vertical-align: middle;
+
+                > a {
+                    display: inline-block;
+                    padding: 8px;
+                    border: 1px solid #333;
+                    font-size: 24px;
+                    background: #fff;
+                    box-sizing: border-box;
+
+                }
+                
+                .active {
+                    background: #333;
+                
+                }
+            }
+
+            .active {
+                margin: 12px;
+                text-align: center;
+                vertical-align: middle;
+
+                > a {
+                    display: inline-block;
+                    padding: 8px;
+                    border: 1px solid #333;
+                    font-size: 24px;
+                    background: #333;
+                    box-sizing: border-box;
+
+                }
             }
         }
     }
