--- a/Stydy10/css/arraystudy.css
+++ b/Stydy10/css/arraystudy.css
@@ -8,20 +8,43 @@
   background: #000000;
   color: #fff;
 }
+#container #utilWrap #loginWrap {
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+}
+#container #utilWrap #loginWrap label {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  font-weight: 600;
+  margin-right: 10px;
+}
+#container #utilWrap #loginWrap #memberId {
+  margin-right: 20px;
+}
+#container #utilWrap #loginWrap #loginBtn {
+  margin-left: 20px;
+  color: #fff;
+  background: #000;
+  border: 1px solid #fff;
+  font-size: 20px;
+  font-weight: 600;
+}
+#container #utilWrap #loginWrap #loginBtn:hover {
+  cursor: pointer;
+  background: #fff;
+  color: #000;
+}
 #container #utilWrap #pointArea {
   display: none;
   border: 1px solid #f9f9f9;
   align-items: flex-end;
   font-weight: 600;
+  padding: 5px;
 }
 #container #utilWrap #pointArea > span {
-  padding: 5px;
-  border-radius: 8%;
-  font-size: 12px;
-}
-#container #utilWrap #pointArea > button {
-  background: #000;
-  color: #fff;
+  font-size: 20px;
 }
 #container > h1 {
   margin-top: 30px;
@@ -46,6 +69,8 @@
   font-size: 20px;
 }
 #container #itemWrap #itemList > li .name {
+  width: 28px;
+  height: 28px;
   margin-right: 10px;
 }
 #container #itemWrap #itemList > li > label {
@@ -58,6 +83,9 @@
 }
 #container #itemWrap #itemList > li .counts {
   width: 20%;
+  height: 25px;
+  font-size: 24px;
+  text-align: center;
 }
 #container #pagenation {
   display: flex;
@@ -99,6 +127,7 @@
   padding: 8px;
   border: 1px solid #333;
   font-size: 24px;
+  color: #fff;
   background: #333;
   box-sizing: border-box;
 }
@@ -107,6 +136,10 @@
   width: 500px;
   margin: 20px auto;
   height: 40px;
+  color: #fff;
+  background: #000;
+  font-size: 20px;
+  font-weight: 600;
 }
 #container #cartWrap {
   position: fixed;
