--- a/Stydy10/scss/arraystudy.scss
+++ b/Stydy10/scss/arraystudy.scss
@@ -9,22 +9,51 @@
         background: #000000;
         color: #fff;
 
+        #loginWrap {
+            display: flex;
+            justify-content: center;
+            justify-items: center;
+                        
+            label {
+                display: flex;
+                align-items: center;
+                font-size: 20px;
+                font-weight: 600;
+                margin-right: 10px;
+                
+            }
+
+            #memberId {
+                margin-right: 20px;
+            }
+
+            #loginBtn {
+                margin-left: 20px;
+                color: #fff;
+                background: #000;
+                border: 1px solid #fff;
+                font-size: 20px;
+                font-weight: 600;
+            }
+            #loginBtn:hover {
+                cursor: pointer;
+                background: #fff;
+                color: #000;
+            }
+        }
+
         #pointArea {
             display: none;
             border: 1px solid #f9f9f9;
             align-items: flex-end;
             font-weight: 600;
+            padding: 5px;
 
             > span {
-                padding: 5px;
-                border-radius: 8%;
-                font-size: 12px;
+                font-size: 20px;
+                
             }
 
-            > button {
-                background: #000;
-                color: #fff;
-            }
         }
         
     }
@@ -53,7 +82,10 @@
                 font-size: 20px;
 
                 .name {
+                    width: 28px;
+                    height: 28px;
                     margin-right: 10px;
+                    
                 }
                 > label {
                     width: 20%;
@@ -69,6 +101,10 @@
 
                 .counts {
                     width: 20%;
+                    height: 25px;
+                    font-size: 24px;
+                    text-align: center;
+                    
                     
                 }
 
@@ -125,6 +161,7 @@
                     padding: 8px;
                     border: 1px solid #333;
                     font-size: 24px;
+                    color: #fff;
                     background: #333;
                     box-sizing: border-box;
 
@@ -138,6 +175,10 @@
         width: 500px;
         margin: 20px auto;
         height: 40px;
+        color: #fff;
+        background: #000;
+        font-size: 20px;
+        font-weight: 600;      
 
     }
     
